<resources>
    <string name="app_name">测试</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="back">返回</string>
    <string name="login_input_phone_hint">请输入手机号</string>
    <string name="login_phone_title">输入您的手机号，开启萌宠生活</string>
    <string name="login_str_next_btn">下一步</string>
    <string name="net_error">网络错误请稍后重试</string>
    <string name="login_verify_code_title">为了验证您的身份\n我们已发送验证码至：%s</string>
    <string name="login_set_pwd_title">为账户设置一个不被人猜到的密码</string>
    <string name="login_set_pwd_tip1">须包含数字、字母、符号中的至少2种元素</string>
    <string name="login_set_pwd_tip2">密码长度8～16位</string>
    <string name="login_success">登录成功</string>
</resources>
