<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.petting.app.account.view.LoginActivity">

    <TextView
        android:id="@+id/button"
        style="@style/PetButtonSyle"
        android:layout_marginTop="30dp"
        android:text="@string/login_str_next_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"/>
    <com.petting.app.view.PetTitleBar
        android:id="@+id/petTitleBar"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.petting.app.view.PetTitleBar>
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/color_yellow_to_orange"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petTitleBar"/>
    <TextView
        android:id="@+id/textView"
        style="@style/PetLoginLGTextStyle"
        android:layout_marginTop="40dp"
        android:text="@string/login_phone_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <EditText
        android:id="@+id/editText"
        style="@style/PetEditStyle"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:hint="@string/login_input_phone_hint"
        android:inputType="phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>
</android.support.constraint.ConstraintLayout>
