<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.petting.app.account.view.LoginActivity">

    <TextView
        android:id="@+id/tv_next"
        style="@style/PetButtonSyle"
        android:layout_marginTop="23dp"
        android:text="@string/login_str_next_btn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tip2"/>
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/color_yellow_to_orange"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/tv_code_hint"
        style="@style/PetLoginGTextStyle"
        android:layout_marginTop="40dp"
        android:text="@string/login_set_pwd_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <EditText
        android:id="@+id/et_pwd"
        style="@style/PetEditStyle"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_code_hint"/>
    <TextView
        android:id="@+id/tv_tip1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_set_pwd_tip1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pwd"/>
    <ImageView
        android:id="@+id/iv_valid"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginRight="38dp"
        android:layout_marginLeft="8dp"
        android:src="@mipmap/tab_add"
        app:layout_constraintBottom_toBottomOf="@+id/tv_tip2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_tip2"
        app:layout_constraintTop_toTopOf="@+id/tv_tip2"/>
    <ImageView
        android:id="@+id/iv_mix"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginRight="38dp"
        android:layout_marginLeft="4dp"
        android:src="@mipmap/tab_add"
        app:layout_constraintBottom_toBottomOf="@+id/tv_tip1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_tip1"
        app:layout_constraintTop_toTopOf="@+id/tv_tip1"/>
    <TextView
        android:id="@+id/tv_tip2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_set_pwd_tip2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tip1"/>
</android.support.constraint.ConstraintLayout>

